add comment line 82

--- a/week1/web_portofolio/style.css
+++ b/week1/web_portofolio/style.css
@@ -79,7 +79,7 @@ nav {
   /* background-color: #0e5514;  */
   /* opacity: 0.75; */
 }
-
+/* width: 90px ==> width: 100px
 nav li {
   font-family: 'Montserrat';
   color: #fff;
